# eqnix

./: .clang-format  .gitignore  README.md  biquad.c  meson.build  pactl-out.txt
data/: application.glade  eqnix.gresource.xml  meson.build
include/: application.hpp  application_ui.hpp  eq_band.hpp  equalizer.hpp  filter_info.hpp  fr_plot.hpp  logger.hpp  pa_manager.hpp  pipeline.hpp  util.hpp
src/: application.cpp  application_ui.cpp  eq_band.cpp  equalizer.cpp  filter_info.cpp  fr_plot.cpp  logger.cpp  main.cpp  meson.build  pa_manager.cpp  pipeline.cpp  util.cpp
src/biquad/: biquad.cpp  biquad.hpp  gst-biquad.cpp  gst-biquad.hpp  meson.build
src/equalizer/: iirequalizer.h
src/iir-equalizer/: iirequalizer.c  iirequalizer.h  iirequalizernbands.c  iirequalizernbands.h  meson.build
src/magresponse/: magresponse.c  magresponse.h
